--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "firebase": "^4.1.2",
-    "vue": "^2.3.3",
-    "vue-router": "^2.5.3"
+    "vue": "^2.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
